--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "2.2.1",
+    "@types/redux-mock-store": "1.5.0",
     "axios": "1.5.1",
     "classnames": "2.3.2",
     "history": "5.3.0",
@@ -22,7 +23,8 @@
     "react-redux": "8.1.3",
     "react-router-dom": "6.16.0",
     "react-toastify": "11.0.5",
-    "redux": "4"
+    "redux": "4",
+    "redux-mock-store": "1.5.5"
   },
   "devDependencies": {
     "@jedmao/redux-mock-store": "3.0.5",
